# limpeza-de-dados

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  cleaning_tool_app.py  create_maps.py  create_maps_clusters.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
bacia-hidro/: README.md  wise_vw_surfacewaterbody_basin_ptcont.dbf  wise_vw_surfacewaterbody_basin_ptcont.sbn  wise_vw_surfacewaterbody_basin_ptcont.sbx  wise_vw_surfacewaterbody_basin_ptcont.shp.xml  wise_vw_surfacewaterbody_basin_ptcont.shx  wise_vw_surfacewaterbody_basin_ptcont.xml
bacias-hidrograficas-principais/: bacias_SNIRH.dbf  bacias_SNIRH.qmd  bacias_SNIRH.shx
src/limpeza_de_dados/: clean_google_form_data.py  create_data_flow_to_google.py  create_map.py  create_sidebar.py  utils.py
yamls/: concelhos.yml  distritos.yml  freguesias.yml
